--- a/posts/2013-04-26-writing-tips-for-non-writers-who-dont-want-to-work-at-writing.mkd
+++ b/posts/2013-04-26-writing-tips-for-non-writers-who-dont-want-to-work-at-writing.mkd
@@ -1,6 +1,7 @@
 ---
 title: Writing Tips for Non-Writers Who Don’t Want to Work at Writing
 tags: writing, tips, reblog
+date: 2013-04-26
 ---
 _This is a reblog of a post named ["Writing Tips for Non-Writers Who Don’t Want to Work at Writing"](http://whatever.scalzi.com/2006/02/12/writing-tips-for-non-writers-who-dont-want-to-work-at-writing/) by [John Scalzi](http://whatever.scalzi.com/author/scalzi/)._
 
