updated to lts-6.6

--- a/posts/2012-09-26-zen-in-godel-escher-and-bach-an-eternal-golden-braid.mkd
+++ b/posts/2012-09-26-zen-in-godel-escher-and-bach-an-eternal-golden-braid.mkd
@@ -1,5 +1,5 @@
 ---
-title: Zen in Gödel, Escher and Bach: An Eternal Golden Braid
+title: "Zen in Gödel, Escher and Bach: An Eternal Golden Braid"
 tags: excerpt, literature, philosophy, spirituality, zen
 date: 2012-09-26
 ---
