--- a/index.mkd
+++ b/index.mkd
@@ -4,10 +4,10 @@ title: Home
 
 ## Welcome ##
 
-Hi, I'm Do Nhat Minh. I'm an Computer Science alumnus from [Nanyang
-Technological University](http://ntu.edu.sg). I like to build software with
-esoteric languages, e.g. [Haskell](http://haskell.org),
-[Rust](http://rust-lang.org), and [Clojure](http://clojure.org).
+Hi, I'm Do Nhat Minh. I'm an Computer Science master student from [University of
+British Columbia](http://ubc.ca). I like to build software with esoteric
+languages, e.g. [Haskell](http://haskell.org), [Rust](http://rust-lang.org), and
+[Clojure](http://clojure.org).
 
 This is my blog about my interests in programming and in other stuff.
 
@@ -18,4 +18,3 @@ You can check out my résumé [here](/resume.pdf).
 $partial("templates/post-list.html")$
 
 …or you can find more in the [archive](/archive.html).
-
