--- a/index.mkd
+++ b/index.mkd
@@ -15,6 +15,6 @@ You can check out my résumé [here](/resume.pdf).
 
 ## Recent posts ##
 
-$partial("templates/post-list.html")$
+$partial("_templates/post-list.html")$
 
 …or you can find more in the [archive](/archive.html).
