--- a/posts/2012-09-26-zen-in-godel-escher-and-bach-an-eternal-golden-braid.mkd
+++ b/posts/2012-09-26-zen-in-godel-escher-and-bach-an-eternal-golden-braid.mkd
@@ -7,7 +7,7 @@ date: 2012-09-26
 
 <p align="right">page 246</p>
 
-> [...] Perhaps the most concise summary of enlightenment would be: trainscending dualism.
+> [...] Perhaps the most concise summary of enlightenment would be: transcending dualism.
 
 <p align="right">page 251</p>
 
