--- a/notes/cheat-sheets/theory-of-computation.tex
+++ b/notes/cheat-sheets/theory-of-computation.tex
@@ -132,7 +132,7 @@ Identities of Regular Languages
 \begin{itemize}
 	\item $\emptyset \cup R = R \cup \emptyset = R$
 	\item $\emptyset \circ R = R \circ \emptyset = \emptyset$
-	\item $\epsilon \circ R = R \circ \epsilon = $
+	\item $\epsilon \circ R = R \circ \epsilon = R$
 	\item $\epsilon^\star = \epsilon$
 	\item $\emptyset^\star = \emptyset$
 	\item $\emptyset \cup R \circ R^\star = R \circ R^\star \cup \epsilon = R^\star$
